# speech-to-text-using-whisper

./: .gitignore  README.md  main.ipynb  pyproject.toml  requirememnts_colab.txt  requirements.txt  streamlit_app.py  streamlit_app_2.py
.streamlit/: config.toml
output_streamlit/: TRAILER - FILM SORE KARYA YANDY LAURENS | TAYANG 10 JULI 2025 DI BIOSKOP.txt  TRAILER - FILM SORE KARYA YANDY LAURENS | TAYANG 10 JULI 2025 DI BIOSKOP.vtt  TRAILER - FILM SORE KARYA YANDY LAURENS | TAYANG 10 JULI 2025 DI BIOSKOP_state.json  ZoomMeeting_SentimentAnalysis_state.json  rev_ppt_transformasi_pairen_state.json
